clang/test/BSC/Negative/Trait/GenericTrait/trait_in_struct1/trait_in_struct1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {
  T f(This* this);
};

int int::f(int* this) {
  return 1;
}

struct S {
    _Trait F<int>* future;
};

int main() {
  int x = 1;
  _Trait F<int> *r = &x; // expected-warning {{incompatible pointer types initializing '_Trait F<int> *' with an expression of type 'int *'}}
                        // expected-error@-1 {{expected a pointer type which has implemented '_Trait F<int>', found 'int'}}
  struct S s = { .future = &x }; // expected-error {{expected a pointer type which has implemented '_Trait F<int>', found 'int'}}
  struct S s1 = { .future = (_Trait F<int>*)&x }; // expected-error {{expected a pointer type which has implemented '_Trait F<int>', found 'int'}}
  struct S s2 = { &x }; // expected-error {{expected a pointer type which has implemented '_Trait F<int>', found 'int'}}
  struct S s3 = { .future = r };
  struct S s4;
  s4.future = &x; // expected-error {{expected a pointer type which has implemented '_Trait F<int>', found 'int'}}
  int a = s.future->f();
  int a1 = s1.future->f();
  int a2 = s2.future->f();
  int a3 = s3.future->f();
  int a4 = s4.future->f();
  return a + a1 + a2 + a3 + a4 - 5;
}